2-03-2005 Qball <qball@qballcow.nl>
	* src/preferences.c:	Saving a playlist that allready exists now
	gives an error and the possibility to change the name.
	* src/libmpd.c:		mpd_ob_playlist_save now returns a error if
	playlist exists
	* src/preferences.c:	Fixed showing/selecting output device.
	* src/libmpd.c:		Added a check version function.

1-03-2005 Qball <qball@qballcow.nl>
	* src/palylist.c:	Disabled moving of row's for now.
	* src/playlist.c:	key don't propate used event.
	* src/player.c:		Fix for bug 373
	* src/preferences.c/glade:	Added support for changing browser
	markup.
	* src/tray-icon.c:		playlist is now also hidden with click
	on tray icon.

28-02-2005 Qball <qball@qballcow.nl>
	* src/main.c/preferences.c:		Support for enable/disable hide on startup.
	* src/main.c:		On exit clean some stuff up. (mpdObj and
	config obj )
	* src/config1.c:	Make close function that cleans up.
	* src/playlist3.c:	Fixed gtk_list_store_new..  wrongly defined.
	(how the hell did it work)
	* src/main.c:		Added stock yalign to list_store.
	* src/playlist3.c:	Icon next to song is now alligned to the top.
	* src/main.c:		Fixed memory leak in changed playlist.
	(freeing of path string);
	* src/libmpd.c:		Fixed memory leak in _free_data and free_queu
	function. (didn't start at the beginnning);
	* src/tray-icon.c:	Fixed memory leak in popup. (nasty fix,  why
	does gtk doc provide a wrong example)
	* src/tray-icon.c:	The popup timeout now follows setting.
	* src/tray-icon.c:	Added the option to fade the popup in. (fake
	transparant.)
	* src/preferences.c:	Added fade-in for popup option.

26-02-2005 Qball <qball@qballcow.nl>
	* glade/preferences.glade:	Cleaned up layout a bit.
	* fixed not free'ed memory from config

25-02-2005 Qball <Qball@qballcow.nl>
	* started working on format editor
	* src/preferences.[c|glade]: Now uses the format editor for the
	playlist and player string.
	* src/main.c:		error window forced to one instance.