@@ -1,3 +1,2 @@
 * Rewrite the id3 info window.
 * implement permission checking.
-* deleting of playlists
